--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohttp==3.8.5
+aiohttp==3.8.5
 aiosignal==1.3.1
 altair==5.1.1
 astor==0.8.1
@@ -59,6 +59,7 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.10.0
+plotly==5.16.1
 prompt-toolkit==3.0.39
 protobuf==4.24.2
 psutil==5.9.5
